--- a/menu1.html
+++ b/menu1.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <h3>Το Μενού μας</h3>
-  <img src="menu.png" alt="Το Μενού μας" />
+  <img src="menu1.png" alt="Το Μενού μας" />
   <div id="menu-container"></div>
 </body>
 </html>
