--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <p class="sub">Στην πλατεία της Χώρας Μεσσηνίας</p>
 
     <div class="btns">
-      <a class="btn" href="menu1.html" aria-label="Μετάβαση στο Μενού 1">Μενού 1</a>
-      <a class="btn secondary" href="menu2.html" aria-label="Μετάβαση στο Μοντέρνο Μίνιμαλ Μενού">Μοντέρνο Μίνιμαλ Μενού</a>
+      <a class="btn" href="menu1.html" aria-label="Μετάβαση στο Μενού 1">Classic Menu</a>
+      <a class="btn secondary" href="menu2.html" aria-label="Μετάβαση στο Μοντέρνο Μίνιμαλ Μενού">Modern Menu</a>
     </div>
 
     <footer>Διάλεξε ποιο μενού θέλεις να δεις</footer>
