--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
 <body>
   <main class="wrap">
     <h1>Cafe Mpournelis</h1>
-    <p class="sub">Στην πλατεία της Χώρας Μεσσηνίας</p>
+    <p class="sub"> Πλατεία, Χώρα Μεσσηνίας</p>
 
     <div class="btns">
       <a class="btn" href="menu1.html" aria-label="Μετάβαση στο Μενού 1">Classic Menu</a>
       <a class="btn secondary" href="menu2.html" aria-label="Μετάβαση στο Μοντέρνο Μίνιμαλ Μενού">Modern Menu</a>
+      <a class="btn secondary" href="menu3.html" aria-label="Μετάβαση στο Μοντέρνο Μίνιμαλ Μενού 2">Modern Menu 2</a>
     </div>
 
     <footer>Διάλεξε ποιο μενού θέλεις να δεις</footer>
