--- a/menu3.html
+++ b/menu3.html
@@ -299,10 +299,10 @@
     <!-- Main content -->
     <main class="content" role="main">
       <header class="topbar" aria-hidden="true">
-        <div class="topbar-inner">
-          <!-- Προαιρετικό: <a class="btn" href="index.html">← Αρχική</a> -->
+       <!-- <div class="topbar-inner">
+           Προαιρετικό: <a class="btn" href="index.html">← Αρχική</a> 
           <a class="btn primary" href="#coffees">Μετάβαση στην αρχή</a>
-        </div>
+        </div>-->
       </header>
 
       <p class="note">Οι τιμές είναι ενδεικτικές και περιλαμβάνουν Φ.Π.Α.</p>
