--- a/menu4.html
+++ b/menu4.html
@@ -2,270 +2,221 @@
 <html lang="el">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <title>Cafe Mpournelis — Μενού</title>
   <style>
-    :root{
-      --bg: #faf9f7;           /* απαλό off-white */
-      --panel: #ffffff;        /* κάρτες/πάνελ */
-      --text: #2b2b2b;         /* κύριο κείμενο */
-      --muted: #777777;        /* δευτερεύον */
-      --line: #ece7e2;         /* γραμμές */
-      --accent: #8c5a3c;       /* coffee mocha */
-      --accent-weak: #f3ebe5;  /* απαλό καφέ για hover */
-      --chip-bg: #f7f2ee;      /* φόντο chip */
-      --shadow-1: 0 6px 18px rgba(0,0,0,0.08);
-      --radius-lg: 16px;
-      --radius-md: 12px;
-      --radius-sm: 10px;
-      --maxw: 980px;
-      --safe-bottom: max(env(safe-area-inset-bottom, 0px), 12px);
+    :root {
+      --bg: #ffffff;
+      --panel: #ffffff;
+      --text: #1f1f1f;
+      --muted: #6b6b6b;
+      --line: #ececec;
+      --accent: #b59b7e;     /* ελαφρύ καφέ */
+      --accent-weak: #f1ebe5; /* πολύ απαλό για backgrounds */
+      --chip-bg: #f7f4f0;
     }
 
-    *{ box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-    html, body{ height:100%; }
-    html{ scroll-behavior:smooth; }
-    body{
-      margin:0;
-      background: var(--bg);
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color: var(--text);
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", "Helvetica Neue", sans-serif;
-      line-height: 1.35;
-      -webkit-font-smoothing: antialiased;
-      text-rendering: optimizeLegibility;
+      background: var(--bg);
     }
 
-    /* Header brand (scrolls κανονικά - mobile friendly) */
-    header.brand-wrap{
-      background: linear-gradient(180deg, #fff, rgba(255,255,255,0.98));
+    .container {
+      width: 100%;
+      max-width: 980px;
+      margin: 0 auto;
+      padding: 20px clamp(16px, 4vw, 32px) 32px;
+    }
+
+    header.top {
+      position: static; /* αφήνουμε το brand να κάνει scroll */
+      background: linear-gradient(180deg, rgba(255,255,255,1), rgba(255,255,255,0.98));
+      backdrop-filter: none;
       border-bottom: 1px solid var(--line);
     }
-    .brand{
-      width: 100%;
-      max-width: var(--maxw);
-      margin: 0 auto;
-      padding: 16px clamp(16px,4vw,28px);
-      display:flex;
-      align-items:center;
+
+    .brand {
+      display: flex;
+      align-items: center;
       justify-content: space-between;
       gap: 12px;
-      padding-left: calc(clamp(16px,4vw,28px) + env(safe-area-inset-left,0px));
-      padding-right: calc(clamp(16px,4vw,28px) + env(safe-area-inset-right,0px));
+      padding: 14px clamp(12px, 3vw, 24px);
+      /* Ελαφρώς πιο δεξιά + ασφάλεια για notch */
+      padding-left: calc(clamp(12px, 3vw, 24px) + env(safe-area-inset-left, 0px));
     }
-    .brand h1{
-      margin:0;
-      font-size: clamp(1.3rem, 1.6vw + 1rem, 1.9rem);
-      letter-spacing: .2px;
+    .brand h1 {
+      font-size: clamp(1.3rem, 2vw + 1rem, 1.9rem);
+      margin: 0;
+      letter-spacing: 0.3px;
     }
-    .brand p{
-      margin:.2rem 0 0;
+    .brand p {
+      margin: 0;
       color: var(--muted);
-      font-size: .95rem;
+      font-size: 0.95rem;
     }
 
-    /* Note */
-    .note{
-      width: 100%;
-      max-width: var(--maxw);
-      margin: 10px auto 0;
-      padding: 0 clamp(16px,4vw,28px);
+    .actions {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+    }
+    .btn {
+      appearance: none;
+      border: 1px solid var(--accent);
+      background: var(--accent);
+      color: #fff;
+      padding: 10px 12px;
+      border-radius: 10px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: transform 0.12s ease, box-shadow 0.12s ease;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+    }
+    .btn:active { transform: scale(0.98); }
+    .btn.secondary {
+      background: transparent;
+      color: var(--text);
+    }
+
+    .chips {
+      position: sticky;
+      top: 0;
+      z-index: 50;
+      display: flex;
+      gap: 8px;
+      overflow-x: auto;
+      padding: 10px clamp(12px, 3vw, 24px) 14px;
+      background: linear-gradient(180deg, rgba(255,255,255,1), rgba(255,255,255,0.98));
+      border-top: 1px solid var(--line);
+      border-bottom: 1px solid var(--line);
+      scroll-snap-type: x proximity;
+      -webkit-overflow-scrolling: touch;
+    }
+    .chip {
+      flex: 0 0 auto;
+      scroll-snap-align: start;
+      border: 1px solid var(--accent);
+      background: var(--chip-bg);
+      color: var(--text);
+      border-radius: 999px;
+      padding: 8px 14px;
+      font-weight: 600;
+      font-size: 0.96rem;
+      text-decoration: none;
+      transition: background 0.2s ease;
+      white-space: nowrap;
+    }
+    .chip:hover { background: var(--accent-weak); }
+
+    main {
+      background: var(--panel);
+    }
+
+    section.category {
+      padding: 22px clamp(16px, 4vw, 24px);
+      border-bottom: 1px solid var(--line);
+    }
+    .category h2 {
+      margin: 0 0 6px;
+      font-size: clamp(1.1rem, 1.2vw + 1rem, 1.4rem);
+      letter-spacing: 0.2px;
+    }
+    .category p.desc {
+      margin: 0 0 16px;
       color: var(--muted);
-      font-size: .94rem;
+      font-size: 0.95rem;
     }
 
-    /* Main content */
-    main{
-      width:100%;
-      max-width: var(--maxw);
-      margin: 0 auto;
-      padding: 12px clamp(16px,4vw,28px) calc(88px + var(--safe-bottom)); /* χώρο για bottom bar σε κινητά */
-    }
-    @media (min-width: 900px){
-      main{ padding-bottom: 40px; }
-    }
-
-    section.category{
-      margin: 18px 0 24px;
-      scroll-margin-top: 80px; /* καλύτερη άγκυρα */
-    }
-    .category h2{
-      margin:0 0 6px;
-      font-size: clamp(1.08rem, 1.1vw + 1rem, 1.36rem);
-      letter-spacing:.2px;
-    }
-    .category .desc{
-      margin:0 0 14px;
-      color: var(--muted);
-      font-size: .95rem;
-    }
-
-    .list{
-      display:grid;
+    .list {
+      display: grid;
       grid-template-columns: 1fr;
       gap: 10px;
     }
-    @media (min-width: 720px){
-      .list{ grid-template-columns: 1fr 1fr; }
-    }
-    @media (min-width: 1100px){
-      .list{ grid-template-columns: 1fr 1fr 1fr; }
+    @media (min-width: 720px) {
+      .list { grid-template-columns: 1fr 1fr; }
     }
 
-    .item{
-      display:grid;
+    .item {
+      display: grid;
       grid-template-columns: 1fr auto;
-      align-items:start;
+      align-items: start;
       gap: 8px 12px;
       padding: 14px 14px;
       border: 1px solid var(--line);
-      border-radius: var(--radius-md);
-      background: var(--panel);
-      box-shadow: var(--shadow-1);
-      transition: transform .12s ease, box-shadow .2s ease, border-color .2s ease;
-      touch-action: manipulation;
+      border-radius: 12px;
+      background: #fff;
     }
-    .item:active{ transform: scale(0.995); }
-    .item h3{
-      margin:0;
+    .item h3 {
+      margin: 0;
       font-size: 1rem;
-      letter-spacing:.2px;
+      letter-spacing: 0.2px;
     }
-    .item p{
+    .item p {
       grid-column: 1 / -1;
       margin: 4px 0 0;
       color: var(--muted);
-      font-size: .92rem;
+      font-size: 0.92rem;
     }
-    .price{
-      align-self:start;
-      margin-left: 8px;
-      font-weight: 800;
+    .price {
+      margin-left: 12px;
+      font-weight: 700;
       color: var(--accent);
       font-variant-numeric: tabular-nums;
-      background: linear-gradient(180deg, #fff, var(--chip-bg));
-      border: 1px solid var(--line);
-      border-radius: 999px;
-      padding: 6px 10px;
     }
 
-    /* Bottom category bar (mobile-first) */
-    .dock{
-      position: fixed;
-      left: 0; right: 0; bottom: 0;
-      z-index: 100;
-      display: grid;
-      grid-auto-flow: column;
-      grid-auto-columns: 1fr;
-      gap: 6px;
-      padding: 8px 10px calc(var(--safe-bottom));
-      background: rgba(255,255,255,0.96);
-      border-top: 1px solid var(--line);
-      backdrop-filter: saturate(140%) blur(8px);
-    }
-    @media (min-width: 900px){
-      .dock{
-        position: sticky;
-        top: 0; bottom: auto;
-        padding: 8px clamp(16px,4vw,28px);
-        border-bottom: 1px solid var(--line);
-        border-top: none;
-      }
-    }
-    .tab{
-      appearance:none;
-      -webkit-appearance:none;
-      text-decoration:none;
-      display:flex;
-      flex-direction: column;
-      align-items:center;
-      justify-content:center;
-      gap: 6px;
-      padding: 10px 8px;
-      min-height: 48px; /* άνετο tap target */
-      border-radius: 12px;
-      color: var(--text);
-      font-weight: 700;
-      font-size: .86rem;
-      background: transparent;
-      border: 1px solid transparent;
-      transition: background .2s ease, border-color .2s ease, color .2s ease, transform .1s ease;
-      white-space: nowrap;
-    }
-    .tab svg{
-      width: 18px; height: 18px;
-      opacity:.9;
-    }
-    .tab:hover{ background: var(--accent-weak); border-color: var(--line); }
-    .tab.active{
-      color: var(--accent);
-      background: var(--chip-bg);
-      border-color: var(--line);
-    }
-
-    footer.site{
-      width:100%;
-      max-width: var(--maxw);
-      margin: 10px auto 0;
-      padding: 18px clamp(16px,4vw,28px) calc(18px + var(--safe-bottom));
+    .note {
+      margin: 18px clamp(16px, 4vw, 24px) 0;
+      font-size: 0.92rem;
       color: var(--muted);
-      font-size: .92rem;
-      display:flex;
+    }
+
+    footer {
+      padding: 20px clamp(16px, 4vw, 24px) 40px;
+      color: #888;
+      font-size: 0.92rem;
+      display: flex;
       flex-wrap: wrap;
       gap: 8px 14px;
-      align-items:center;
+      align-items: center;
       justify-content: space-between;
-    }
-
-    /* Focus visible for προσβασιμότητα */
-    a:focus-visible, button:focus-visible{
-      outline: 2px solid var(--accent);
-      outline-offset: 2px;
     }
   </style>
 </head>
 <body>
-  <header class="brand-wrap">
-    <div class="brand">
+  <header class="top">
+    <div class="brand container">
       <div>
         <h1>Cafe Mpournelis</h1>
         <p>Στην πλατεία της Χώρας Μεσσηνίας</p>
       </div>
+      <!--
+      <div class="actions">
+        <a class="btn secondary" href="index.html" aria-label="Επιστροφή στην αρχική">← Αρχική</a>
+      </div>
+      -->
     </div>
+
+    <nav class="chips" aria-label="Κατηγορίες">
+      <a class="chip" href="#coffees">Καφέδες</a>
+      <a class="chip" href="#softs">Αναψυκτικά</a>
+      <a class="chip" href="#icecream">Παγωτά</a>
+      <a class="chip" href="#drinks">Ποτά</a>
+      <a class="chip" href="#cocktails">Κοκτέιλς</a>
+      <a class="chip" href="#snacks">Σνακ</a>
+    </nav>
   </header>
 
-  <!-- Bottom/Top dock navigation -->
-  <nav class="dock" aria-label="Κατηγορίες">
-    <a class="tab" href="#coffees" data-target="coffees" aria-label="Καφέδες">
-      <!-- μικρό coffee bean icon -->
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M17 7c0 6-3 10-7 10S3 15 3 9 6 1 10 1s7 4 7 6z" stroke-width="1.5"/></svg>
-      Καφέδες
-    </a>
-    <a class="tab" href="#softs" data-target="softs" aria-label="Αναψυκτικά">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M7 2h10l-1 3H8L7 2zM7 5h10v14a3 3 0 0 1-3 3H10a3 3 0 0 1-3-3V5z" stroke-width="1.5"/></svg>
-      Αναψυκτικά
-    </a>
-    <a class="tab" href="#icecream" data-target="icecream" aria-label="Παγωτά">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M12 2a5 5 0 0 1 5 5 4 4 0 0 1-4 4h-2A4 4 0 0 1 7 7a5 5 0 0 1 5-5z"/><path d="M10 11l2 9 2-9" stroke-width="1.5"/></svg>
-      Παγωτά
-    </a>
-    <a class="tab" href="#drinks" data-target="drinks" aria-label="Ποτά">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M7 2h10l-1 6-4 4-4-4-1-6zM8 22h8" stroke-width="1.5"/></svg>
-      Ποτά
-    </a>
-    <a class="tab" href="#cocktails" data-target="cocktails" aria-label="Κοκτέιλς">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M3 3h18l-8 7v7l-2 4" stroke-width="1.5"/></svg>
-      Κοκτέιλς
-    </a>
-    <a class="tab" href="#snacks" data-target="snacks" aria-label="Σνακ">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M4 8h16v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V8zM8 8V6a4 4 0 0 1 8 0v2" stroke-width="1.5"/></svg>
-      Σνακ
-    </a>
-  </nav>
+  <main class="container">
+    <p class="note">Οι τιμές είναι ενδεικτικές και περιλαμβάνουν Φ.Π.Α.</p>
 
-  <p class="note">Οι τιμές είναι ενδεικτικές και περιλαμβάνουν Φ.Π.Α.</p>
-
-  <main role="main">
     <section id="coffees" class="category" aria-labelledby="coffees-title">
       <h2 id="coffees-title">Καφέδες</h2>
       <p class="desc">Κλασικοί και κρύοι καφέδες.</p>
@@ -464,29 +415,9 @@
     </section>
   </main>
 
-  <footer class="site">
+  <footer class="container" style="padding-inline: clamp(16px,4vw,24px);">
     <span>© Cafe Mpournelis</span>
     <span>Πλατεία Χώρα Μεσσηνίας</span>
   </footer>
-
-  <script>
-    // Μικρό enhancement: ενεργό tab με βάση το scroll
-    (function(){
-      const tabs = Array.from(document.querySelectorAll('.tab'));
-      const sections = tabs.map(t => document.getElementById(t.dataset.target)).filter(Boolean);
-
-      // IntersectionObserver για να βάφει active το σχετικό tab
-      const obs = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if(entry.isIntersecting){
-            const id = entry.target.id;
-            tabs.forEach(t => t.classList.toggle('active', t.dataset.target === id));
-          }
-        });
-      }, { rootMargin: '-40% 0px -55% 0px', threshold: 0 });
-
-      sections.forEach(sec => obs.observe(sec));
-    })();
-  </script>
 </body>
 </html>
